--- a/src/assets/images/index.html
+++ b/src/assets/images/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="icon" href="/Journee_straight.png" sizes="24px"/>
+    <link rel="icon" type="icon" href="./Journee_straight.png" sizes="24px"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>journee_frontend</title>
+    <title>Journee</title>
   </head>
   <body>
     <div id="root"></div>
